feat: metricas y graficas en panel admin